--- a/config/secrets-example.yml
+++ b/config/secrets-example.yml
@@ -2,16 +2,25 @@
 # RENAME this file to secrets.yml
 
 development:
+  MSG_KEY: QwsjC6WdxnNYjiWn5qOFp4xBRFcWY+wjrARjV0Vz3cA=
   DB_KEY: pFrP9v4qQNRvpEeLl4RL0s8C3pmMyOKTYrjHhb2rq4g=
   DATABASE_URL: sqlite://app/db/store/development.db
+  SENDGRID_API_KEY: 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
+  SENDGRID_FROM_EMAIL: sarunyu.sst@gapp.nthu.edu.tw
   SECURE_SCHEME: HTTP
 
+
 test:
+  MSG_KEY: QwsjC6WdxnNYjiWn5qOFp4xBRFcWY+wjrARjV0Vz3cA=
   DB_KEY: vgUZYN/SwldEppmt0MFgxFFrGWqmARCcZsIvU4l/Dwc=
   DATABASE_URL: sqlite://app/db/store/test.db
+  SENDGRID_API_KEY: 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
+  SENDGRID_FROM_EMAIL: sarunyu.sst@gapp.nthu.edu.tw
   SECURE_SCHEME: HTTP
 
 production:
   DB_KEY: <use `rake newkey:db` to generate a secret key>
   DATABASE_URL: <set to production DB>
-  SECURE_SCHEME: HTTPS
+  SENDGRID_API_KEY: <provision new API key on SendGrid>
+  SENDGRID_FROM_EMAIL: <provision single sender email address on SendGrid>
+  SECURE_SCHEME: HTTP
