--- a/config/secrets-example.yml
+++ b/config/secrets-example.yml
@@ -5,8 +5,8 @@ development:
   MSG_KEY: QwsjC6WdxnNYjiWn5qOFp4xBRFcWY+wjrARjV0Vz3cA=
   DB_KEY: pFrP9v4qQNRvpEeLl4RL0s8C3pmMyOKTYrjHhb2rq4g=
   DATABASE_URL: sqlite://app/db/store/development.db
-  SENDGRID_API_KEY: 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
-  SENDGRID_FROM_EMAIL: sarunyu.sst@gapp.nthu.edu.tw
+  SENDGRID_API_KEY: <SENDGRID_API_KEY>
+  SENDGRID_FROM_EMAIL: <SENDGRID_FROM_EMAIL>
   SECURE_SCHEME: HTTP
 
 
@@ -14,8 +14,8 @@ test:
   MSG_KEY: QwsjC6WdxnNYjiWn5qOFp4xBRFcWY+wjrARjV0Vz3cA=
   DB_KEY: vgUZYN/SwldEppmt0MFgxFFrGWqmARCcZsIvU4l/Dwc=
   DATABASE_URL: sqlite://app/db/store/test.db
-  SENDGRID_API_KEY: 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
-  SENDGRID_FROM_EMAIL: sarunyu.sst@gapp.nthu.edu.tw
+  SENDGRID_API_KEY: <SENDGRID_API_KEY>
+  SENDGRID_FROM_EMAIL: <SENDGRID_FROM_EMAIL>
   SECURE_SCHEME: HTTP
 
 production:
