--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -34,5 +34,7 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby-version }}
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+    - name: Run migration
+      run: RACK_ENV=test rake db:migrate
     - name: Run tests
-      run: bundle exec rake
+      run: RACK_ENV=test rake spec
