--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -35,6 +35,6 @@ jobs:
         ruby-version: ${{ matrix.ruby-version }}
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
     - name: Run migrate
-      run: rake db:migrate
+      run: rake db:migrate 
     - name: Run tests
-      run: rake spec
+      run: bundle exec rake
