--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -37,4 +37,4 @@ jobs:
     - name: Run migrate
       run: rake db:migrate 
     - name: Run tests
-      run: bundle exec rake spec
+      run: rake spec
