--- a/app/db/seeds/owners_urls.yml
+++ b/app/db/seeds/owners_urls.yml
@@ -2,7 +2,7 @@
   - username: ernesto
     urls:
       - Efr4fT
-  - username: test_02
+  - username: ernesto_test
     urls:
       - Afrc03
       - ZfEc31
