--- a/config/secrets-example.yml
+++ b/config/secrets-example.yml
@@ -4,18 +4,20 @@
 development:
   MSG_KEY: QwsjC6WdxnNYjiWn5qOFp4xBRFcWY+wjrARjV0Vz3cA=
   DB_KEY: pFrP9v4qQNRvpEeLl4RL0s8C3pmMyOKTYrjHhb2rq4g=
-  DATABASE_URL: sqlite://app/db/store/development.db
-  SENDGRID_API_KEY: <SENDGRID_API_KEY>
-  SENDGRID_FROM_EMAIL: <SENDGRID_FROM_EMAIL>
+  APP_URL: http://127.0.0.1:9292
+  DATABASE_URL: xxx
+  SENDGRID_API_KEY: xxx
+  SENDGRID_FROM_EMAIL: xxx
   SECURE_SCHEME: HTTP
 
 
 test:
   MSG_KEY: QwsjC6WdxnNYjiWn5qOFp4xBRFcWY+wjrARjV0Vz3cA=
-  DB_KEY: vgUZYN/SwldEppmt0MFgxFFrGWqmARCcZsIvU4l/Dwc=
-  DATABASE_URL: sqlite://app/db/store/test.db
-  SENDGRID_API_KEY: <SENDGRID_API_KEY>
-  SENDGRID_FROM_EMAIL: <SENDGRID_FROM_EMAIL>
+  DB_KEY: pFrP9v4qQNRvpEeLl4RL0s8C3pmMyOKTYrjHhb2rq4g=
+  APP_URL: http://127.0.0.1:9292
+  DATABASE_URL: xxx
+  SENDGRID_API_KEY: xxx
+  SENDGRID_FROM_EMAIL: xxx
   SECURE_SCHEME: HTTP
 
 production:
